Fixed utility nav and search input overlap in FF Win
git-svn-id: http://svn.blueriver.com/mura/trunk/www@443 50f7a5e4-a141-4b55-9860-49daa24b3293

--- a/default/includes/themes/merced/css/site.css
+++ b/default/includes/themes/merced/css/site.css
@@ -125,7 +125,7 @@ tr.alt td { background: #eee; }  /*Move*/
 
 #searchForm input.text {
 	float: left;
-	width: 14em;
+	width: 160px;
 	margin: 0 .75em 0 0;
 	font-style: italic;
 		padding: 1px;
